--- a/vanilla-redux/public/index.html
+++ b/vanilla-redux/public/index.html
@@ -10,17 +10,15 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
-    <title>Vanilla Redux</title>
- <div id="root"></div>
 
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <title>Vanilla Redux</title>
+    <div id="root"></div>
   </head>
   <body>
-   <button id="add">Add</button>
-   <span></span>
-   <button id="minus">Minus</button>
-   
+    <button id="add">Add</button>
+    <span id="number">0</span>
+    <button id="minus">Minus</button>
   </body>
 </html>
